[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/core/main.gd" id="1_main"]
[ext_resource type="Script" path="res://scripts/core/battle_map.gd" id="2_battlemap"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="BattleMap" type="Node2D" parent="."]
script = ExtResource("2_battlemap")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)

[node name="UI" type="CanvasLayer" parent="."]

[node name="ModeLabel" type="Label" parent="UI"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 30.0
text = "Mode: MENU"

[node name="InfoLabel" type="Label" parent="UI"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -400.0
offset_top = -30.0
offset_right = 400.0
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
text = ""
